--- a/package.json
+++ b/package.json
@@ -146,7 +146,6 @@
     "html-entities": "^1.3.1",
     "i18n": "^0.11.1",
     "js-yaml": "^3.14.0",
-    "jsonwebtoken": "0.4.0",
     "jssha": "^3.1.1",
     "juicy-chat-bot": "~0.7.1",
     "libxmljs2": "^0.32.0",
@@ -251,7 +250,8 @@
     "source-map-support": "^0.5.19",
     "ts-jest": "^26.5.0",
     "ts-node": "^10.8.0",
-    "typescript": "~4.6.0"
+    "typescript": "~4.6.0",
+    "log4js": "^0.6.36",
   },
   "engines": {
     "node": "16 - 20"
