--- a/package.json
+++ b/package.json
@@ -200,7 +200,6 @@
     "@types/jasmine": "~3.9.1",
     "@types/jest": "^26.0.20",
     "@types/js-yaml": "^3.12.6",
-    "@types/jsonwebtoken": "^8.5.0",
     "@types/jws": "^3.2.5",
     "@types/mocha": "^8.1.1",
     "@types/morgan": "^1.9.2",
@@ -251,7 +250,7 @@
     "ts-jest": "^26.5.0",
     "ts-node": "^10.8.0",
     "typescript": "~4.6.0",
-    "log4js": "^0.6.36",
+    "log4js": "^0.6.36"
   },
   "engines": {
     "node": "16 - 20"
